--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<text>My current favourite song is "Tujhse Preet Lagi Hai Radhe"</text>
+		<a href = "https://youtu.be/HnlXl_hGPiE?si=HxB6X9sXhelQkPrF">link</a>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
